--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "project_2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "level": "^4.0.0"
+    "express": "^4.16.4",
+    "level": "^4.0.0",
+    "body-parser": "^1.18.3"
   }
 }
